# mcp_slack_bot

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  servers_config.json
.github/: copilot-instructions.md
prompts/: prompts_config.yaml
scripts/: generate_sample_questions.py  load_test_data.sh
servers/: mcp_client.py
tools/: math.py  search.py
utils/: __init__.py  chatbot.py  config.py  elicitation.py  prompt_manager.py  server.py  slack_bot.py  slackbot.py  tool.py
