[project]
name = "ai-slack-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "langchain[openai]>=0.3.25",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.4.8",
    "load-dotenv>=0.1.0",
    "slack-bolt>=1.23.0",
    "requests>=2.31.0",
    "mcp>=1.0.0",
]
